<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/secondheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/baseline_arrow_back_ios_new_24"/>

    <TextView
        android:id="@+id/tvSecondScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnBack"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="116dp"
        android:text="@string/second_screen"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
</RelativeLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondheader"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="11dp"
        android:text="@string/name"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvSelectedUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/selected_user_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="30sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSelectUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/pilih_pengguna"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAlignment="center"/>

</RelativeLayout>
