<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle_background"
        android:padding="16dp"
        android:src="@drawable/add_user" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name"
        android:padding="16dp"
        android:textSize="16sp"
        android:background="@drawable/input_text_background"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"/>

    <EditText
        android:id="@+id/palindromeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameInput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/palindrome"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:background="@drawable/input_text_background"/>

    <Button
        android:id="@+id/checkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/palindromeInput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/check"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>